test/field/set_on_class.lox
struct Foo {}
Foo.bar = "value" // error: only instances have field
